<resources>
    <string name="app_name">Note App</string>
    <string name="login">Login</string>
    <string name="login_text"><u>Already have Account</u></string>
    <string name="signup_text"><u>Don\'t have Account ? SignUp</u></string>
    <string name="signup"><u>SignUp</u></string>
    <string name="txt_add_new_person"><u>Add New Member</u></string>
    <string name="save">Save</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="delete_sure">Are you sure you want to delete?</string>

    <string name="dialog_action_yes">yes</string>
    <string name="dialog_action_no">No</string>
    <string name="company_name_empty_msg">Please,Fill Company Name</string>
    <string name="company_email_empty_msg">Please,Fill Company Email</string>
    <string name="company_password_empty_msg">Please,Fill Company Password</string>
    <string name="company_password_confirmation_empty_msg">Please,Fill Company Password Confirmation</string>
    <string name="company_password_not_identical">Password does not match</string>
    <string name="verify">Verify</string>
    <string name="send_sms">Send SMS</string>
    <string name="resend_sms_code">Resend SMS Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_field_msg">Please, Fill Phone Number</string>
    <string name="verification_code">Verification code</string>
    <string name="verification_code_empty_msg">Please ,Fill Verification Code</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="code_does_not_match">Code does not match</string>
    <string name="title_activity_note_home">NoteHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="projects">Projects</string>

    <string name="groups">Groups</string>
    <string name="members">Members</string>
    <string name="empty_project_msg">There is no project.Please, click plus button to add new project</string>
    <string name="project_name">Project Name</string>
    <string name="project_description">Project Description</string>
    <string name="project_cost">Project Cost</string>
    <string name="task_cost">Task Cost</string>

    <string name="project_owner">Project Owner</string>
    <string name="task_owner">Responsible People</string>
    <string name="tasks">Tasks</string>
    <string name="pick_a_end_date">Pick a End Date</string>
    <string name="pick_a_end_time">Pick a End Time</string>
    <string name="project_name_empty">Project Name Can not Be Empty</string>
    <string name="task_name_empty">Task Name Can not Be Empty</string>
    <string name="task_voice_note_empty">Please Hold button and record voice message</string>

    <string name="pick_a_start_time">Pick a Start Time</string>
    <string name="pick_a_start_date">Pick a Start Date</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="company_name">Company Name</string>
    <string name="company_email">Company Email</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="register_as_company">Register As Company</string>
    <string name="Upload_Picture">Upload Picture</string>
    <string name="pic_about">Picture Of Your Company</string>
    <string name="SignUp">Sign UP</string>
    <string name="signup_text_person"><u>Sign As Person</u></string>
    <string name="Pictur_Added_Successfully">Picture Added Sccessfully</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please Wait</string>
    <string name="group_name_empty">Group Name Can not Be Empty</string>
    <string name="task_description">Task Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_add_new_group">Add New Group</string>
    <string name="txt_add_new_project">Add New Project</string>
    <string name="txt_add_new_user">Add New Member</string>

    <string name="add_pic">Add Picture</string>
    <string name="group_name">Group Name</string>
    <string name="group_desc">Group Description</string>
    <string name="group_added_successfully">Group Added Successfully</string>
    <string name="login_as_company">Login As Company :</string>
    <string name="register_as_user">Register As User</string>
    <string name="user_email_empty_msg">Please,Fill User Email</string>
    <string name="user_password_empty_msg">Please,Fill User Password</string>
    <string name="coin">Coin</string>
    <string name="project_director">Project Director</string>
    <string name="duration">Duration</string>
    <string name="txt_add_new_task">Add New Task</string>
    <string name="task_name">Task Name</string>
    <string name="task_status">Task status</string>
    <string name="project_status">Project status</string>
    <string name="txt_upload_file">Upload File</string>
    <string name="Select">Select</string>
    <string name="users_selected">Responsible people selected</string>
    <string name="Project_selected">Project selected</string>
    <string name="group_selected">Group selected</string>

    <string name="task_added_success">Task Added Successfully</string>
    <string name="Critical">Critical</string>
    <string name="Usual">Usual</string>
    <string name="Urgent">Urgent</string>
    <string name="Welcome">Welcome</string>
    <string name="task_start_time_empty">Task start time can not be empty</string>
    <string name="task_end_time_empty">Task end time not Be Empty</string>
    <string name="task_start_date_empty">Task start date Can not Be Empty</string>
    <string name="task_end_date_empty">Task end date Can not Be Empty</string>
    <string name="task_under_processing">Under Processing</string>
    <string name="task_completed">Completed</string>
    <string name="project_add_successfully">Saved Successfully</string>
    <string name="start_record">Start Recording Calls</string>
    <string name="stop_record">Stop Recording Calls</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="deleted_succees">Deleted Successfully</string>
    <string name="users">Members</string>
    <string name="phone">Phone</string>
    <string name="group">Group</string>
    <string name="user_added_successfully">Member Added Successfully</string>
    <string name="Group_selected">Group Selected</string>
    <string name="user_group_empty_msg">Please select Group</string>
    <string name="user_phone_empty_msg">Please Enter Phone</string>
    <string name="no_tasks_found">No Tasks Yet , Click Add</string>
    <string name="no_projects_found">No Projects Yet , Click Add</string>
    <string name="no_users_found">No Users Yet , Click Add</string>
    <string name="no_groups_found">No Groups Yet , Click Add</string>
    <string name="queued">QUEUED</string>
    <string name="added">ADDED</string>
    <string name="status_unknown">Status Unknown</string>
    <string name="percent_progress">%1$d%%</string>
    <string name="downloading">downloading…</string>
    <string name="start_time">Start :</string>
    <string name="end_time">End :</string>
    <string name="tasks_count">Tasks Count</string>
    <string name="what_do_you_want_to_do">What Do You Want To Do ?</string>
    <string name="project_updated_successfully">Project Updated Successfully</string>
    <string name="no_member_yet">No Members Yet</string>
    <string name="default_file_name" translatable="false">TaskNote</string>
    <string name="toast_recording_start">Recording Voice Note Started</string>
    <string name="record_in_progress">Recording</string>
    <string name="record_prompt">Tap to start record</string>
    <string name="pending">Pending</string>
    <string name="download"><u>Doawnload Attachment</u></string>
    <string name="play">Play</string>
    <string name="cancel">Cancel</string>
    <string name="download_eta_sec">%1$ds left</string>
    <string name="download_eta_min">%1$dm %2$ds left</string>
    <string name="download_eta_hrs">%1$dh %2$dm %3$ds left</string>
    <string name="download_speed_bytes">%1$d B/s</string>
    <string name="download_speed_kb">%1$s KB/s</string>
    <string name="download_speed_mb">%1$s MB/s</string>
    <string name="retry">RETRY</string>
    <string name="download_complete">Download Completed ! check downloads folder</string>
    <string name="not_found">Not Found</string>
    <string name="not_assigned">Not Assigned Yet</string>
    <string name="complete_task">Complete Task</string>
</resources>
