<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/color_background"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
      >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_verification_code"

            android:imeOptions="actionDone"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/verification_code" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_verify_code"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_back"
        android:text="@string/verify"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/text_view_resend_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/resend_sms_code"
        android:textColor="@color/link" />

</LinearLayout>